# TABX

./: .gitignore  LICENSE  README.md  main.py  map_editor.py  pyproject.toml  train.sh
.devcontainer/: dev.Dockerfile  devcontainer.json
src/: render.py
src/algorithms/: MAPPO.py  QMIX.py  modules.py  pong_minimal2.ipynb  ppo_vmap.ipynb  render.ipynb  soccer.ipynb
src/baseline/: base_algo.py  battle_simulator_mappo.py  comb_deploy_ppo.py  deploy_comb_ppo.py  dqn.py  ippo.py  ippo_rnn.py  iql_rnn.py  iql_rnn_state.py  layers.py  mappo.py  mappo_rnn.py  mappo_rnn_rnd.py  ppo.py  qmix_rnn.py  qmix_rnn_state.py  train_battle_simulator.sh  train_comb_deploy_ppo.py  train_dqn_mappo.py  train_tabs_comb_deploy_ppo.py  train_tabs_dqn_mappo.py  train_tabs_ppo_ippo.py  train_tabs_ppo_mappo.py  train_utils.py  utils.py  vdn_rnn.py
src/baseline/algorithm/: __init__.py  base_algo.py  dqn.py  ippo.py  mappo.py  ppo.py  pqn.py
src/baseline/alternating_training/: train_tabs_ppo_ippo.py  train_tabs_ppo_mappo.py  train_tabs_pqn_ippo.py  train_tabs_pqn_mappo.py
src/baseline/battle_simulator_training/: battle_simulator_mappo.py
src/baseline/comb_deploy_training/: comb_deploy_ppo.py
src/baseline/configs/: config.py
src/baseline/module/: modules.py
src/baseline/modules/: __init__.py  modules.py
src/baseline/simultaneous_training/: train_tabs_ppo_ippo.py  train_tabs_ppo_mappo.py  train_tabs_pqn_ippo.py  train_tabs_pqn_mappo.py
src/baseline/ued/: dr_mappo_rnn.py  level_generator.py  level_sampler.py  plr_mappo_rnn.py  scores.py  sfl_mappo_rnn.py  utils.py
src/baseline_linen/: iql_rnn.py  layers.py  mappo_rnn.py  qmix_rnn.py  utils.py  vdn_rnn.py
src/baseline_linen/ued/: scores.py  (+6 more)
src/debug/: debug_scenarios.py  heuristic_evaluation.py  render.py
src/environments/: base_maenv.py
src/experiments/: train_bs_mappo.py  train_cd_ppo.py  train_cd_pqn.py  train_cd_then_bs.py
src/maenv/: base_maenv.py  buffer.py  physics.py  pong.py  render.py  soccer.py  util.py  utils.py
src/tabs/: README.md  __init__.py  config.py  constants.py  heuristic_policy.py  run_example.py  scenarios.py  tabs.py  units.py  utils.py
src/tabx/: README.md  __init__.py  config.py  constants.py  run_example.py  scenario_editor.py  tabx.py  units.py  utils.py
(+173 files in other folders)
