[project]
name = "tabs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chex>=0.1.89",
    "jax>=0.6.1",
    "flax>=0.10.6",
    "optax>=0.2.5",
    "tensorflow-probability>=0.25",
    "pygame>=2.5.2",
    "uv>=0.6.6",
    "wandb>=0.20.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "easydict>=1.13",
    "nvidia-cublas-cu12>=12.9.1.4",
    "tyro>=0.9.29",
    "tqdm>=4.67.1",
    "flashbax>=0.1.3",
    "nvitop>=1.5.3",
    "distrax>=0.1.5",
]

[project.scripts]
tabs = "TABS:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.uv]
package = true
